--- a/index.html
+++ b/index.html
@@ -6,20 +6,27 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Web Demo</title>
-    <link rel="stylesheet" href="./css/normalize.css" type="text/css">
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link rel="stylesheet" href="./css/normalize.css" type="text/css">
 </head>
 <body>
-<header>
+<header class="hero">
     <nav class="nav container">
         <div class="nav__logo">
             <h2 class="nav__title">Curso Css.</h2>
         </div>
         <ul class="nav__link nav_link--menu">
-            <li class="nav_items">
+            <li class="nav__items">
                 <a href="#" class="nav__links">Inicio</a>
+            </li>
+            <li class="nav__items">
                 <a href="#" class="nav__links">Acerca de</a>
+            </li>
+            <li class="nav__items">
                 <a href="#" class="nav__links">Contacto</a>
+            </li>
+            <li class="nav__items">
                 <a href="#" class="nav__links">Blog</a>
             </li>
             <img src="./img/close.svg" alt="" class="nav__close">
@@ -31,9 +38,50 @@
     <section class="hero__container container">
         <h1 class="hero__title">Aprende css desde cero hasta dominarlo</h1>
         <p class="hero__paragraph">Elige aprender css de una vez por todas, una vez que termines este curso seras
-        capaz de crear cualquier layout con css y crear tus propias animaciones.</p>
+            capaz de crear cualquier layout con css y crear tus propias animaciones.</p>
         <a href="#" class="cta">Comienza ahora</a>
     </section>
 </header>
+<main>
+    <section class="container about">
+        <h2 class="subtitle">¿Que quieres aprender?</h2>
+        <p class="about__paragraph">Todo lo necesario y obligatorio que se necseitan para trabajos en desarrollo
+            front-end</p>
+        <div class="about__main">
+            <article class="about__icons">
+                <img src="./img/shapes.svg" alt="" class="about__icon">
+                <h3 class="about__title">CSS Layouts</h3>
+                <p class="about__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, minima,
+                    tempora! Illo, iusto.</p>
+            </article>
+            <article class="about__icons">
+                <img src="./img/paint.svg" alt="" class="about__icon">
+                <h3 class="about__title">Animaciones</h3>
+                <p class="about__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, minima,
+                    tempora! Illo, iusto.</p>
+            </article>
+            <article class="about__icons">
+                <img src="./img/code.svg" alt="" class="about__icon">
+                <h3 class="about__title">Sass</h3>
+                <p class="about__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, minima,
+                    tempora! Illo, iusto.</p>
+            </article>
+        </div>
+    </section>
+    <section class="knowledge">
+        <div class="knowledge__container container">
+            <div class="knowledge__text">
+                <h2 class="subtitle">Cuso completo CSS. ¡Domina CSS de una vez por todas!</h2>
+                <p class="knowledge__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquid
+                    aspernatur consequatur dolore dolorem error illo, ipsam iusto laboriosam laudantium, neque numquam
+                    omnis quo quos ratione tenetur ut voluptatibus voluptatum!</p>
+                <a href="" class="cta">Entra al curso</a>
+            </div>
+            <figure class="knowledge__picture">
+                <img src="./img/macbook.png" alt="" class="knowledge__img">
+            </figure>
+        </div>
+    </section>
+</main>
 </body>
 </html>
