--- a/index.html
+++ b/index.html
@@ -82,6 +82,45 @@
             </figure>
         </div>
     </section>
+    <section class="price container">
+        <h2 class="subtitle">Obtén el plan perfecto para aprender.</h2>
+        <div class="price__table">
+            <div class="price__element">
+                <p class="plan__name">Flexbox</p>
+                <h3 class="plan__price">Free</h3>
+
+                <div class="plan__items">
+                    <p class="plan__features">Flexbox</p>
+                    <p class="plan__features">Layout</p>
+                    <p class="plan__features">Responsive</p>
+                </div>
+                <a href="" class="plan__cta">Empieza ahora</a>
+            </div>
+            <div class="price__element">
+                <p class="price__name">Grid</p>
+                <h3 class="price__price">$19.990/mes</h3>
+
+                <div class="price__items">
+                    <p class="price__features">Grid</p>
+                    <p class="price__features">Implicit Grid</p>
+                    <p class="price__features">Implicit Grid</p>
+                    <p class="price__features">Responsive</p>
+                </div>
+                <a href="" class="price__cta">Empieza ahora</a>
+            </div>
+            <div class="price__element">
+                <p class="price__name">Animaciones</p>
+                <h3 class="price__price">$39.990/mes</h3>
+
+                <div class="price__items">
+                    <p class="price__features">Animation</p>
+                    <p class="price__features">Transition</p>
+                    <p class="price__features">Render Website</p>
+                </div>
+                <a href="" class="price__cta">Empieza ahora</a>
+            </div>
+        </div>
+    </section>
 </main>
 </body>
 </html>
