--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <article class="questions__padding">
                 <div class="questions__answer">
                     <h3 class="questions__title">¿Que es CSS?
-                    <span class="questions__arrow">
+                        <span class="questions__arrow">
                         <img src="./img/arrow.svg" alt="" class="questions__img">
                     </span>
                     </h3>
@@ -185,7 +185,7 @@
             <article class="questions__padding">
                 <div class="questions__answer">
                     <h3 class="questions__title">¿Que aprendere?
-                    <span class="questions__arrow">
+                        <span class="questions__arrow">
                         <img src="./img/arrow.svg" alt="" class="questions__img">
                     </span>
                     </h3>
@@ -197,7 +197,7 @@
             <article class="questions__padding">
                 <div class="questions__answer">
                     <h3 class="questions__title">¿Que es CSS grid?
-                    <span class="questions__arrow">
+                        <span class="questions__arrow">
                         <img src="./img/arrow.svg" alt="" class="questions__img">
                     </span>
                     </h3>
@@ -207,8 +207,54 @@
                 </div>
             </article>
         </section>
-    </section>
+        <section class="questions__offer">
+            <h2 class="subtitle">¿Estas listo para aprender?</h2>
+            <p class="questions__copy">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum impedit itaque necessitatibus nobis
+                placeat praesentium sit temporibus, voluptatum? Adipisci aspernatur consectetur eaque est, fugiat id
+                iste neque quam repellendus tenetur!
+            </p>
+            <a href="" class="cta">Aprende ahora.</a>
+        </section>
+
 </main>
+<footer class="footer">
+    <section class="footer__container container">
+        <nav class="nav nav__footer">
+            <h2 class="footer__title">Curso CSS</h2>
+            <ul class="nav__link nav__link--footer">
+                <li class="nav__items">
+                    <a href="#" class="nav__links">Inicio</a>
+                </li>
+                <li class="nav__items">
+                    <a href="#" class="nav__links">Acerca de</a>
+                </li>
+                <li class="nav__items">
+                    <a href="#" class="nav__links">Contacto</a>
+                </li>
+                <li class="nav__items">
+                    <a href="#" class="nav__links">Blog</a>
+                </li>
+            </ul>
+        </nav>
+        <form action="" class="footer__form">
+            <h2 class="footer__newsletter">Suscribete a la newsletter</h2>
+            <div class="footer__inputs">
+                <input type="email" name="" id="" placeholder="Email" class="footer__input">
+                <input type="submit" value="Registrate" class="footer__submit">
+            </div>
+        </form>
+    </section>
+    <section class="footer__copy container">
+        <div class="footer__social">
+            <a href="" class="footer__icons"><img src="./img/facebook.svg" alt="" class="footer__img"></a>
+            <a href="" class="footer__icons"><img src="./img/twitter.svg" alt="" class="footer__img"></a>
+            <a href="" class="footer__icons"><img src="./img/youtube.svg" alt="" class="footer__img"></a>
+        </div>
+        <h3 class="footer__copyright">Derechos reservados &copy; Rodrigo Otárola</h3>
+    </section>
+</footer>
+</section>
 <script src="./js/slider.js"></script>
 <script src="./js/questions.js"></script>
 </body>
