--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="nav__logo">
             <h2 class="nav__title">Curso Css.</h2>
         </div>
-        <ul class="nav__link nav_link--menu">
+        <ul class="nav__link nav__link--menu">
             <li class="nav__items">
                 <a href="#" class="nav__links">Inicio</a>
             </li>
@@ -257,5 +257,6 @@
 </section>
 <script src="./js/slider.js"></script>
 <script src="./js/questions.js"></script>
+<script src="./js/menu.js"></script>
 </body>
 </html>
